zien24_implementation/org/objects/Forecast_Instelling__mdt.object
<CustomObject>
    <fields>
        <fullName>April__c</fullName>
        <label>April</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Augustus__c</fullName>
        <label>Augustus</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>December__c</fullName>
        <label>December</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Februari__c</fullName>
        <label>Februari</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Januari__c</fullName>
        <label>Januari</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Juli__c</fullName>
        <label>Juli</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Juni__c</fullName>
        <label>Juni</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maart__c</fullName>
        <label>Maart</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mei__c</fullName>
        <label>Mei</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>November__c</fullName>
        <label>November</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Oktober__c</fullName>
        <label>Oktober</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>September__c</fullName>
        <label>September</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Forecast Instelling</label>
    <pluralLabel>Forecast Instellingen</pluralLabel>
</CustomObject>